// START1 OMIT
syntax = "proto3";

// User Service
//
// User Service API provides create, read, and read (many) access to a list of 
// users.
package pb;

import "google/api/annotations.proto";
// END1 OMIT

// START2 OMIT
message UserResp {
    int64 id = 1;
    string name = 2;
    int64 age = 3;
    string fortune = 4;
}
//OMIT
message NewUserReq {
    string name = 1;
    int64 age = 2;
}
//OMIT
message GetUserReq {
    int64 id = 1;
}
//OMIT
message UsersResp {
    repeated UserResp users = 1;
}
//OMIT
message GetUsersReq {
    int64 start = 1;
    int64 count = 2;
    bool desc = 3;
}
// END2 OMIT

// START3 OMIT
service UserService {
    rpc NewUser(NewUserReq) returns (UserResp) {
        option(google.api.http) = {
            post: "/v1/user"
            body: "*"
        };
    }

    rpc GetUser(GetUserReq) returns (UserResp) {
        option(google.api.http) = {
            get: "/v1/user/{id}"
        };
    }

    rpc GetUsers(GetUsersReq) returns (UsersResp) {
        option(google.api.http) = {
            get: "/v1/users"
        };
    }
}
// END3 OMIT
